--- a/introDS_04_NN_2024.ipynb
+++ b/introDS_04_NN_2024.ipynb
@@ -260,7 +260,7 @@
         "  img = img.resize((width,height))\n",
         "  img = img.convert('L')\n",
         "\n",
-        "  return np.array(img,dtype=np.float)\n",
+        "  return np.array(img,dtype=np.float64)\n",
         "\n",
         "x = draw()\n",
         "print(\"入力した画像は以下のとおりです\\n\", x)\n",
